--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,20 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
+
 android {
     compileSdkVersion 28
+
+    dataBinding {
+        enabled = true
+    }
+
+    androidExtensions {
+        experimental = true
+    }
+
     defaultConfig {
         applicationId "com.example.sanderbeazar.sportinaalst"
         minSdkVersion 14
@@ -13,6 +25,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -20,13 +33,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -36,4 +51,69 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0' //gebruiken recyclerview voor list
     implementation 'com.android.support:design:28.0.0' //gebruiken appbarlayout
     implementation 'com.basgeekball:awesome-validation:4.2'
+
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.maps.android:android-maps-utils:0.4+'
+    //filter
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //gebruiken recyclerview voor list
+    implementation 'com.android.support:design:28.0.0'
+    //gebruiken appbarlayout
+    implementation 'com.basgeekball:awesome-validation:4.2'
+    implementation "com.squareup.retrofit2:retrofit:$versions.retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$versions.retrofit"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
+    //OkHttp
+    implementation "com.squareup.okhttp3:okhttp:$versions.okHttp"
+    implementation "com.squareup.okhttp3:logging-interceptor:$versions.okHttp"
+    // LiveData & ViewModel
+    implementation "android.arch.lifecycle:extensions:$versions.architecture"
+    // Data binding
+    annotationProcessor "com.android.databinding:compiler:3.1.4"
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$versions.retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$versions.retrofit"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
+
+    // RxJava
+    implementation "io.reactivex.rxjava2:rxjava:$versions.rx"
+    implementation "io.reactivex.rxjava2:rxandroid:$versions.rxandroid"
+
+    implementation "com.squareup.moshi:moshi-kotlin:$versions.moshi"
+    //implementation "se.ansman.kotshi:api:$versions.kotshi"
+    //implementation "se.ansman.kotshi:compiler:$versions.kotshi"
+
+    // Anko
+    implementation 'org.jetbrains.anko:anko-common:0.10.4'
+
+    implementation "com.google.dagger:dagger:$versions.dagger"
+    implementation "com.google.dagger:dagger-android-support:$versions.dagger"
+
+
+    // Adds the annotation processor dependency to the annotation processor classpath.
+    //Android Studio by default will not allow you to navigate to generated Dagger 2
+    // code as legitimate classes because they are not normally added to the source path.
+    // Adding the annotationProcessor plugin will add these files into the IDE classpath
+    // and enable you to have more visibility.
+    annotationProcessor "com.google.dagger:dagger-compiler:$versions.dagger"
+    kapt "com.google.dagger:dagger-compiler:$versions.dagger"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$versions.dagger"
+
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //Logger functionality with beautifull logging : https://github.com/orhanobut/logger
+    implementation 'com.orhanobut:logger:2.2.0'
+
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
