--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,10 +110,29 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:2.2.2"
+    androidTestImplementation 'com.android.support.test:runner:0.5'
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:2.2.2"
+/**
+ * AccessibilityChecks
+ * CountingIdlingResource
+ * DrawerActions
+ * DrawerMatchers
+ * PickerActions (Time and Date picker)
+ * RecyclerViewActions
+ */
+    androidTestImplementation("com.android.support.test.espresso:espresso-contrib:2.2.2") {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-v7'
+        exclude group: 'com.android.support', module: 'design'
+        exclude module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
 
     //Logger functionality with beautifull logging : https://github.com/orhanobut/logger
     implementation 'com.orhanobut:logger:2.2.0'
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+}
 }
